--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "pgdb": "sudo docker run --name postgres -d -p 5432:5432 -e POSTGRES_USER=ui_test -e POSTGRES_PASSWORD=ui_test -e POSTGRES_DB=ui_test postgres:14.4",
-    "init-table": "sudo docker exec -it postgres psql -U ui_test -c 'CREATE TABLE users ( acct varchar(128), pwd varchar(128), fullname varchar(128), created_at timestamp, updated_at timestamp, PRIMARY KEY (acct));'"
+    "init-table": "sudo docker exec -it postgres psql -U ui_test -c 'CREATE TABLE users ( acct varchar(128), pwd varchar(128), fullname varchar(128), created_at timestamp, updated_at timestamp, PRIMARY KEY (acct));'",
+    "start": "node app.js"
   },
   "author": "Henry Chang <humiya.chang@hotmail.com>",
   "license": "ISC",
@@ -13,5 +14,13 @@
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "http-status-codes": "^2.2.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.21.0"
   }
 }
