--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
+    "query-string": "^7.1.1",
     "sequelize": "^6.21.0",
-    "swagger-ui-express": "^4.4.0"
+    "swagger-ui-express": "^4.4.0",
+    "ws": "^8.8.0"
   }
 }
