--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
+    "ajv": "^8.11.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
